# red_lenlab

./: .appveyor.yml  .cproject  .gitignore  .project  .readthedocs.yaml  .travis.yml  README.md  adc.c  adc.h  adc_queue.h  appveyor.yml  build.md  build.py  ci.md  command_handler.c  command_handler.h  data_handler.c  data_handler.h  fwbuild.py  main.c  notes.md  packet_queue.h  peripherals.c  red_lenlab.pri  red_lenlab.pro  release.md  reply_handler.c  reply_handler.h  tm4c1230h6pm_startup_ccs.c  unittest.md  usb_bulk_structs.c  usb_bulk_structs.h  usb_dev_bulk.c  usb_device.c  usb_device.h
.circleci/: config.yml
.github/workflows/: build-red_firmware.yml
devel-notes/: Sine Testing.ipynb  frequency_algorithm.ipynb  oscilloscope.xlsx  signalgenerator.ipynb
device_test/: linear.py  trigger.py
doc/: .gitignore  Makefile  authors.rst  conf.py  firmware.rst  frequency.rst  index.rst  lenlab.rst  license.rst  logger.rst  make.bat  make.py  model.rst  oscilloscope.rst  preparation.rst  requirements.txt  signal.rst
firmware/: .cproject  .gitignore  .project  Tiva TM4C1230H6PM.ccxml  adc.c  adc.h  adc_group.h  adc_queue.h  adc_timer.h  clock.c  clock.h  command_handler.c  command_handler.h  config.h  data_handler.c  data_handler.h  data_queue.h  debug.h  echo.py  error.h  event_queue.h  int_timer.c  int_timer.h  log_seq.c  log_seq.h  logger.c  logger.h  main.c  memory.c  memory.h  message.h  microtest.h  ms_os_descriptor.c  ms_os_descriptor.h  osc_seq.c  osc_seq.h  oscilloscope.c  oscilloscope.h  page_handler.c  page_handler.h  (+26 more)
firmware8/: .cproject  .project  echo.py  lenlab_protocol.h  lenlab_version.h  ms_os_descriptor.c  reply_handler.h  ring.h  usb_device.c
fwtests/: backend.py  header_file.py  lenlab_protocol.py  lenlab_version.py  message.py  red_board.py  test_ccs.py  test_echo.py  test_logger.py  test_oscilloscope.py  test_setup.py
fwutils/: ccs.py  header_file.py  lenlab_protocol.py  lenlab_version.py  red_board.py
include/: lenlab_protocol.h  lenlab_version.h
lenlab/: .gitignore  CMakeLists.txt  build.md  config.h  lenlab.pro  main.cpp
lenlab/app/: app.pro  frequencyform.cpp  frequencyform.h  frequencyform.ui  labchart.cpp  labchart.h  labchart.ui  labpage.cpp  labpage.h  labpage.ui  loggerform.cpp  loggerform.h  loggerform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oscilloscopeform.cpp  oscilloscopeform.h  oscilloscopeform.ui  signalform.cpp  signalform.h  signalform.ui  spectrumform.cpp  spectrumform.h  spectrumform.ui  vlabel.cpp  vlabel.h
lenlab/controller/: device.cpp  device.h  eventloop.cpp  eventloop.h  lenlab.cpp  lenlab.h  logger.cpp  logger.h  manager.cpp  manager.h  usbthread.cpp  usbthread.h
lenlab/gui/: frequencyform.cpp  frequencyform.h  frequencyform.ui  gui.pro  labchart.cpp  labchart.h  labchart.ui  loggerform.cpp  loggerform.h  loggerform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  oscilloscopeform.cpp  oscilloscopeform.h  oscilloscopeform.ui  pointvectorseriesdata.cpp  pointvectorseriesdata.h  signalform.cpp  signalform.h  signalform.ui  verticallabel.cpp  verticallabel.h
lenlab/lenlab/: .gitignore  lenlab.pro  main.cpp
lenlab/lenlab/gui/: frequencyform.cpp  frequencyform.h  frequencyform.ui  loggerform.cpp  loggerform.h  loggerform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  oscilloscopeform.cpp  oscilloscopeform.h  oscilloscopeform.ui  signalform.cpp  signalform.h  signalform.ui
lenlab/lenlab/model/: component.h  frequency.h  lenlab.cpp  lenlab.h  logger.cpp  logger.h  oscilloscope.h  signal.cpp  signal.h
lenlab/model/: communication.cpp  communication.h  component.cpp  component.h  exception.cpp  exception.h  frequency.cpp  frequency.h  frequencyseries.cpp  frequencyseries.h  frequencysweep.cpp  frequencysweep.h  indexparameter.cpp  indexparameter.h  lenlab.cpp  lenlab.h  logger.cpp  logger.h  loggerseries.cpp  loggerseries.h  minmaxvector.cpp  minmaxvector.h  model.pro  oscilloscope.cpp  oscilloscope.h  parameter.cpp  parameter.h  series.cpp  series.h  signal.cpp  signal.h  signalgenerator.cpp  signalgenerator.h  spectrumanalyzer.cpp  spectrumanalyzer.h  utils.cpp  utils.h  voltmeter.cpp  voltmeter.h  waveform.cpp  (+1 more)
lenlab/protocol/: board.cpp  board.h  device.cpp  device.h  eventloop.cpp  eventloop.h  factory.cpp  factory.h  manager.cpp  manager.h  message.cpp  message.h  protocol.pro  protocolerror.cpp  protocolerror.h  querythread.cpp  querythread.h  task.cpp  task.h  thread.cpp  thread.h  transaction.cpp  transaction.h  transactionguard.cpp  transactionguard.h  transactionlock.cpp  transactionlock.h  usbdevice.cpp  usbdevice.h  usbthread.cpp  usbthread.h  virtualdevice.cpp  virtualdevice.h
lenlab/tests/: tst_modeltest.cpp  tst_protocoltest.cpp
lenlab/usb/: active.cpp  active.h  activeguard.cpp  activeguard.h  bus.cpp  bus.h  context.cpp  context.h  devhandle.cpp  devhandle.h  device.cpp  device.h  devicehandle.cpp  devicehandle.h  devicelist.cpp  devicelist.h  eventloop.cpp  eventloop.h  exception.cpp  exception.h  handler.cpp  handler.h  interface.cpp  interface.h  message.cpp  message.h  notetoself.cpp  notetoself.h  packet.cpp  packet.h  thread.cpp  thread.h  transfer.cpp  transfer.h  usb.pro  usberror.cpp  usberror.h  usbexception.cpp  usbexception.h
lenlab_flash/: lenlab_flash.bat
linux/: 20-lenlab.rules  dependencies  lenlab.desktop
protocol/: message.h
red_firmware/: command_handler.h  oscilloscope.c  reply_handler.h  trigger.c  usb_device.h
red_lenlab/: .gitignore  lenlab.pro
red_usb_bulk/: .cproject  .project  clocked_transfer.py  int_timer.c  int_timer.h  main.c  red_clock.c  red_clock.h  red_usb_bulk.py  tm4c123gh6pm_startup_ccs.c  usb_device.c  usb_device.h
red_usb_cdc/: .cproject  .project  README.md  ccs.py  com_device.c  com_device.h  lenlab_protocol.h  lenlab_version.h  main.c  ms_os_descriptor.c  test_red_usb_cdc.py  tm4c123gh6pm_startup_ccs.c
release/: .gitignore  copyright.py  release.py
targetConfigs/: Tiva TM4C1230H6PM.ccxml
test/: test.pro
tests/: ccs.py  test_red_usb_cdc.py
uniflash_windows_64/: dslite.bat  one_time_setup.bat
(+135 files in other folders)
